avdevice/decklink: add sqd configuration option
Reviewed-by: Marton Balint <cus@passwd.hu>
Signed-off-by: Limin Wang <lance.lmwang@gmail.com>

--- a/doc/outdevs.texi
+++ b/doc/outdevs.texi
@@ -211,6 +211,11 @@ Sets the SDI video link configuration on the used output. Must be
 SDI.
 Defaults to @samp{unset}.
 
+@item sqd
+Enable Square Division Quad Split mode for Quad-link SDI output.
+Must be @samp{unset}, @samp{true} or @samp{false}.
+Defaults to @option{unset}.
+
 @end table
 
 @subsection Examples
