lavf/concatdec: add stream_codec directive

--- a/doc/demuxers.texi
+++ b/doc/demuxers.texi
@@ -181,6 +181,9 @@ streams is not reliable.
 Metadata for the stream.
 Can be present multiple times.
 
+@item @code{stream_codec @var{value}}
+Codec for the stream.
+
 @end table
 
 @subsection Options
