--- a/doc/demuxers.texi
+++ b/doc/demuxers.texi
@@ -184,6 +184,9 @@ Can be present multiple times.
 @item @code{stream_codec @var{value}}
 Codec for the stream.
 
+@item @code{stream_extradata @var{hex_string}}
+Extradata for the string, encoded in hexadecimal.
+
 @item @code{cahpter @var{id} @var{start} @var{end}}
 Add a chapter. @var{id} is an unique identifier, possibly small and
 consecutive.
