avfilter/vf_morpho: add gradient operation type

--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -15374,6 +15374,7 @@ Set morphological transform to apply, can be:
 @item dilate
 @item open
 @item close
+@item gradient
 @end table
 Default is @code{erode}.
 
