avfilter/vf_morpho: add tophat and blackhat operations

--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -15375,6 +15375,8 @@ Set morphological transform to apply, can be:
 @item open
 @item close
 @item gradient
+@item tophat
+@item blackhat
 @end table
 Default is @code{erode}.
 
